--- a/Lesson2/Homework2/src/App.css
+++ b/Lesson2/Homework2/src/App.css
@@ -1,25 +1,16 @@
+body {
+  background-image: url("./images/bacground_picture.jpg");
+  background-size: cover;
+  height: 100%;
+}
+
 .mainWrapper {
-  width: 600px;
-  height: 600px;
-  border: 1px solid black;
-  display: flex;
-  flex-direction: column;
-}
-
-.messageList {
-  width: 100%;
-  height: 90%;
-  border-bottom: 1px solid black;
-}
-
-.inputWrapper {
-  flex: 1;
-  width: 100%;
-  display: flex;
+  width: 60%;
+  height: 620px;
+  margin: 10px auto 10px auto;
+  align-content: center;
   align-items: center;
-  justify-content: space-between;
+  border: 1px solid wheat;
+  display:block; 
+  background-color:rgba(0, 0, 0, 0.5);
 }
-
-/* .input {
-  width
-} */
